# rag_based_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eval.py  ingest.py  load_test.py  main.py  pyproject.toml
app/: eval.py  ingest.py  load_test.py  main.py
app/core/: agent.py  config.py  rag.py
core/: agent.py  config.py  rag.py
tests/: conftest.py  test_agent.py  test_config.py  test_ingest.py  test_rag.py
